ONLINE JOB APPLICATION SYSTEM

--- a/form.html
+++ b/form.html
@@ -20,14 +20,19 @@
 </header>
 
 <nav class="menu">
-  <a href="#">Home</a>
-  <a href="#">Registration</a>
-  <a href="#">Online Application</a>
-  <a href="#">Upload</a>
-  <a href="#">Fees</a>
-  <a href="#">Call Letter</a>
-  <a href="#">Other Application</a>
+  <a href="form.html">Home</a>
+  <a href="registration.html">Registration</a>
+  <a href="online-application.html">Online Application</a>
+  <a href="upload.html">Upload</a>
+  <a href="fees.html">Fees</a>
+  <a href="call-letter.html">Call Letter</a>
+  <a href="other-application.html">Other Application</a>
 </nav>
+
+<div class="page">
+  <h2>Welcome to OJAS</h2>
+  <p>Online Job Application System - Government of Gujarat</p>
+</div>
 
 <div class="container">
 
