--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <a href="#books" class="links"><i class="fa fa-arrow-right"></i> Books</a>
       <a href="#genres" class="links"><i class="fa fa-arrow-right"></i> Genres</a>
       <a href="#reviews" class="links"><i class="fa fa-arrow-right"></i> Reviews</a>
-      <!-- <a href="#updates" class="links"><i class="fa fa-arrow-right"></i> Updates</a> -->
+      <a href="#updates" class="links"><i class="fa fa-arrow-right"></i> Updates</a>
     </div>
 
     <div class="box">
